fix: prevent --- from being added to the name

--- a/parcellab/monolith/templates/configmap-services.yaml
+++ b/parcellab/monolith/templates/configmap-services.yaml
@@ -3,7 +3,7 @@
 {{- range .Values.extraServices }}
 {{- if .config -}}
 {{- include "common.configmap" (merge (deepCopy $root) (dict "config" .config "name" .name)) }}
-{{- end -}}
+{{- end }}
 ---
 {{- end -}}
 {{- end -}}
