--- a/parcellab/monolith/templates/configmap-cronjobs.yaml
+++ b/parcellab/monolith/templates/configmap-cronjobs.yaml
@@ -3,7 +3,7 @@
 {{- range .Values.cronjobs }}
 {{- if .config -}}
 {{- include "common.configmap" (merge (deepCopy $root) (dict "config" .config "name" .name)) }}
-{{- end -}}
+{{- end }}
 ---
 {{- end -}}
 {{- end -}}
