--- a/parcellab/monolith/templates/externalsecret-cronjobs.yaml
+++ b/parcellab/monolith/templates/externalsecret-cronjobs.yaml
@@ -3,7 +3,7 @@
 {{- range .Values.cronjobs }}
 {{- if .externalSecret -}}
 {{- include "common.externalsecret" (merge (deepCopy $root) (dict "externalSecret" .externalSecret "name" .name)) }}
-{{- end -}}
+{{- end }}
 ---
 {{- end -}}
 {{- end -}}
