--- a/parcellab/worker-group/templates/configmap.yaml
+++ b/parcellab/worker-group/templates/configmap.yaml
@@ -3,7 +3,7 @@
 {{- range .Values.workers }}
 {{- if .config -}}
 {{- include "common.configmap" (merge (deepCopy $root) (dict "config" .config "name" .name)) }}
-{{- end -}}
+{{- end }}
 ---
 {{- end -}}
 {{- end -}}
