fix: fix secret and config loading per pod

--- a/parcellab/worker-group/templates/deployment.yaml
+++ b/parcellab/worker-group/templates/deployment.yaml
@@ -1,7 +1,7 @@
 {{- if .Values.workers -}}
 {{- $root := . -}}
 {{- range .Values.workers }}
-{{- include "common.deployment" (merge (deepCopy $root) (dict "worker" .)) }}
+{{- include "common.deployment" (merge (deepCopy $root) (dict "service" . "type" "worker")) }}
 ---
 {{- end }}
 {{- end }}
