--- a/.github/workflows/json.yaml
+++ b/.github/workflows/json.yaml
@@ -20,4 +20,4 @@ jobs:
       - name: Install npm dependencies
         run: npm i
       - name: Lint JSON
-        run: npx prettier -c **/*.json
+        run: node_modules/.bin/prettier -c **/*.json
