--- a/.github/workflows/yaml.yaml
+++ b/.github/workflows/yaml.yaml
@@ -22,4 +22,4 @@ jobs:
       - name: Install npm dependencies
         run: npm i
       - name: Lint YAML
-        run: npx prettier -c "**/*.{yaml,yml}"
+        run: node_modules/.bin/prettier -c "**/*.{yaml,yml}"
