--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
   "devDependencies": {
-    "@commitlint/cli": "17.0.3",
-    "@commitlint/config-conventional": "17.0.3",
-    "@parcellab/danger-plugin": "^0.0.16",
-    "danger": "^11.1.1",
+    "@commitlint/cli": "17.1.2",
+    "@commitlint/config-conventional": "17.1.0",
+    "@parcellab/danger-plugin": "^0.0.22",
+    "danger": "^11.1.2",
     "helm-test": "^1.3.2",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
-    "prettier": "2.7.1",
-    "typescript": "^4.7.4"
+    "prettier": "2.7.1"
   },
   "engines": {
     "node": ">=v18"
   },
   "lint-staged": {
-    "**/*": "npm run format"
+    "**/*": "prettier --write --ignore-unknown"
   },
   "scripts": {
     "deps": "find parcellab -type d -maxdepth 1 -mindepth 1 | xargs -I {} helm dependency update {}",
