--- a/.github/workflows/json.yaml
+++ b/.github/workflows/json.yaml
@@ -17,6 +17,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Use Node.js
         uses: actions/setup-node@v3
+        with:
+          version: 18
       - name: Install npm dependencies
         run: npm i
       - name: Lint JSON
