--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -16,10 +16,12 @@ jobs:
         uses: actions/checkout@v3
       - name: Use Node.js
         uses: actions/setup-node@v3
+        with:
+          version: 18
       - name: Install npm dependencies
         run: npm i
       - name: Run Danger
-        run: npx danger ci
+        run: node_modules/.bin/danger ci
         env:
           GITHUB_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN_OPEN_SOURCE }}
   label:
