--- a/.github/workflows/yaml.yaml
+++ b/.github/workflows/yaml.yaml
@@ -19,6 +19,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Use Node.js
         uses: actions/setup-node@v3
+        with:
+          version: 18
       - name: Install npm dependencies
         run: npm i
       - name: Lint YAML
