--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
-          version: 18
+          node-version: 18
       - name: Install npm dependencies
         run: npm i
       - name: Run Danger
