--- a/.github/workflows/yaml.yaml
+++ b/.github/workflows/yaml.yaml
@@ -20,7 +20,7 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
-          version: 18
+          node-version: 18
       - name: Install npm dependencies
         run: npm i
       - name: Lint YAML
