--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Install npm dependencies
         run: npm i
       - name: Run Danger
-        run: node_modules/.bin/danger ci
+        run: node_modules/.bin/danger ci -d dangerfile.cjs
         env:
           GITHUB_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN_OPEN_SOURCE }}
   label:
