feature: adds support for ArgoCD hooks to monolith helm chart (#20)
* feat: adds support for ArgoCD presync jobs to monolith helm chart

https://argo-cd.readthedocs.io/en/stable/user-guide/resource_hooks/

* feat: generalize presync to 'job' with default annotation 'Skip'

* style: code reviwe feedback

Co-authored-by: Darío Blanco Iturriaga <dario.iturriaga@parcellab.com>

--- a/parcellab/monolith/values.yaml
+++ b/parcellab/monolith/values.yaml
@@ -106,6 +106,31 @@ cronjobs:
   #   suspend: false
 
 ##
+## Jobs / Hooks
+##
+
+# Only for the defaults
+job:
+  enabled: true
+  backoffLimit: 1
+  activeDeadlineSeconds: 300
+
+jobs: []
+#  - name: migrate
+#    hook: PreSync
+#    command:
+#      - /bin/sh
+#      - -c
+#      - date; echo Hello from the Kubernetes cluster
+#    resources:
+#      limits:
+#        cpu: 100m
+#        memory: 128Mi
+#      requests:
+#        cpu: 50m
+#        memory: 64Mi
+
+##
 ## Workers
 ##
 
