fix: fix newline error when renderering multiple objects

--- a/parcellab/worker-group/templates/externalsecret.yaml
+++ b/parcellab/worker-group/templates/externalsecret.yaml
@@ -3,7 +3,7 @@
 {{- range .Values.workers }}
 {{- if .externalSecret -}}
 {{- include "common.externalsecret" (merge (deepCopy $root) (dict "externalSecret" .externalSecret "name" .name)) }}
-{{- end }}
+{{- end -}}
 ---
 {{- end -}}
 {{- end -}}
