fix: fix newline error when renderering multiple objects

--- a/parcellab/worker-group/templates/configmap.yaml
+++ b/parcellab/worker-group/templates/configmap.yaml
@@ -3,8 +3,8 @@
 {{- range .Values.workers }}
 {{- if .config -}}
 {{- include "common.configmap" (merge (deepCopy $root) (dict "config" .config "name" .name)) }}
-{{- end -}}
+{{- end }}
 ---
-{{- end -}}
-{{- end -}}
+{{- end }}
+{{- end }}
 {{- include "common.configmap" . }}
