--- a/parcellab/worker-group/templates/externalsecret.yaml
+++ b/parcellab/worker-group/templates/externalsecret.yaml
@@ -3,8 +3,8 @@
 {{- range .Values.workers }}
 {{- if .externalSecret -}}
 {{- include "common.externalsecret" (merge (deepCopy $root) (dict "externalSecret" .externalSecret "name" .name)) }}
-{{- end -}}
+{{- end }}
 ---
-{{- end -}}
-{{- end -}}
+{{- end }}
+{{- end }}
 {{- include "common.externalsecret" . }}
