--- a/parcellab/monolith/values.yaml
+++ b/parcellab/monolith/values.yaml
@@ -54,6 +54,11 @@ ingress:
     #   paths:
     #     - path: /
     #       pathType: Prefix
+    #       backend:
+    #         service:
+    #           name: app
+    #           port:
+    #            number: 80
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
@@ -66,6 +71,11 @@ extraIngresses: []
 #     paths:
 #     - path: /
 #       pathType: Prefix
+#       backend:
+#         service:
+#           name: app
+#           port:
+#            number: 80
 #   tls:
 #   - secretName: chart-example-tls
 #     hosts:
