--- a/parcellab/monolith/values.yaml
+++ b/parcellab/monolith/values.yaml
@@ -54,22 +54,11 @@ ingress:
     #   paths:
     #     - path: /
     #       pathType: Prefix
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
-
-extraIngresses: []
-# - name: myingress
-#   hosts:
-#   - host: app
-#     paths:
-#     - path: /
-#       pathType: Prefix
-#   tls:
-#   - secretName: chart-example-tls
-#     hosts:
-#     - chart-example.local
+  tls:
+    []
+    # - secretName: chart-example-tls
+    #   hosts:
+    #     - chart-example.local
 
 ##
 ## Cronjob
