--- a/parcellab/worker-group/templates/deployment.yaml
+++ b/parcellab/worker-group/templates/deployment.yaml
@@ -1,7 +1,1 @@
-{{- if .Values.workers -}}
-{{- $root := . -}}
-{{- range .Values.workers }}
-{{- include "common.deployment" (merge (deepCopy $root) (dict "service" . "type" "worker")) }}
----
-{{- end }}
-{{- end }}
+{{- include "common.deployment" . }}
