fix: fix extra secrets in workers

--- a/parcellab/worker-group/templates/externalsecret-extra.yaml
+++ b/parcellab/worker-group/templates/externalsecret-extra.yaml
@@ -1,6 +1,6 @@
 {{- $root := . -}}
-{{- if .Values.extraWorkers -}}
-{{- range .Values.extraWorkers }}
+{{- if .Values.workers -}}
+{{- range .Values.workers }}
 {{- if .externalSecret -}}
 {{- include "common.externalsecret" (merge (deepCopy $root) (dict "externalSecret" .externalSecret "name" .name)) }}
 {{- end }}
