chore: set deployment with workers

--- a/parcellab/worker-group/values.yaml
+++ b/parcellab/worker-group/values.yaml
@@ -125,6 +125,7 @@ resources:
 ## Workers
 ##
 
+# If empty list is given, no deployments will be created
 workers: []
 # - name: myworker
 #   command:
