--- a/.github/workflows/json.yaml
+++ b/.github/workflows/json.yaml
@@ -11,15 +11,4 @@ on:
   workflow_dispatch:
 jobs:
   lint:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout current git repository
-        uses: actions/checkout@v3
-      - name: Use Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-      - name: Install npm dependencies
-        run: npm i
-      - name: Lint JSON
-        run: node_modules/.bin/prettier -c **/*.json
+    uses: parcelLab/ci/.github/workflows/json.yaml@v1
