--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -7,32 +7,8 @@ on:
       - ready_for_review
       - reopened
       - synchronize
-  workflow_dispatch:
 jobs:
-  danger:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout current git repository
-        uses: actions/checkout@v3
-      - name: Use Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-      - name: Install npm dependencies
-        run: npm i
-      - name: Run Danger
-        run: node_modules/.bin/danger ci -d dangerfile.cjs
-        env:
-          GITHUB_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN_OPEN_SOURCE }}
-  label:
-    permissions:
-      contents: read
-      pull-requests: write
-    runs-on: ubuntu-latest
-    steps:
-      - name: Label PR based on pushed file paths
-        uses: actions/labeler@v4
-        with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-          configuration-path: .github/workflows/configs/labeler.yaml
-          sync-labels: true
+  pr:
+    uses: parcelLab/ci/.github/workflows/pr.yaml@v1
+    secrets:
+      repoAccessToken: ${{ secrets.GITHUB_TOKEN }}
