--- a/.github/workflows/yaml.yaml
+++ b/.github/workflows/yaml.yaml
@@ -13,15 +13,4 @@ on:
   workflow_dispatch:
 jobs:
   lint:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout current git repository
-        uses: actions/checkout@v3
-      - name: Use Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-      - name: Install npm dependencies
-        run: npm i
-      - name: Lint YAML
-        run: node_modules/.bin/prettier -c "**/*.{yaml,yml}"
+    uses: parcelLab/ci/.github/workflows/yaml.yaml@v1
