fix: enable cronjobs only when name is present

--- a/parcellab/monolith/templates/cronjobs.yaml
+++ b/parcellab/monolith/templates/cronjobs.yaml
@@ -1,7 +1,9 @@
 {{- if .Values.cronjobs -}}
 {{- $root := . -}}
 {{- range .Values.cronjobs }}
+{{- if .name -}}
 {{- include "common.cronjob" (merge (deepCopy $root) (dict "cronjob" .)) }}
 ---
+{{- end }}
 {{- end }}
 {{- end }}
