fix: updated version of monolith to 0.0.21 removed obsolete cronjob template because /just used for template values for each job defined in cronjobs attribute

--- a/parcellab/monolith/templates/cronjobs.yaml
+++ b/parcellab/monolith/templates/cronjobs.yaml
@@ -1,7 +1,7 @@
-{{- if .Values.cronjobs -}}
+{{- if or .Values.cronjobs .cronjobs -}}
 {{- $root := . -}}
 {{- range .Values.cronjobs }}
-{{- if .name -}}
+{{- if hasKey . "name" -}}
 {{- include "common.cronjob" (merge (deepCopy $root) (dict "cronjob" .)) }}
 ---
 {{- end }}
