--- a/parcellab/monolith/Chart.yaml
+++ b/parcellab/monolith/Chart.yaml
@@ -1,8 +1,16 @@
 apiVersion: v2
 name: monolith
 description: Application that may define multiple services and cronjobs
-version: 0.0.23
+version: 0.0.24
 dependencies:
   - name: common
     version: "*"
     repository: file://../common
+  - name: postgresql
+    repository: https://charts.bitnami.com/bitnami
+    version: 12.1.15
+    condition: postgresql.enabled
+  - name: redis
+    repository: https://charts.bitnami.com/bitnami
+    version: 17.7.3
+    condition: redis.enabled
