feat: added config

--- a/parcellab/microservice/values.yaml
+++ b/parcellab/microservice/values.yaml
@@ -192,4 +192,4 @@ initContainers: []
 #      fsGroup: 2000
 
 extraContainers: []
-# same as initContainers
+# sidecars configuration is identical to initContainers
