feat: added support for separate secrets and configmaps for containers

--- a/parcellab/microservice/templates/configmap.yaml
+++ b/parcellab/microservice/templates/configmap.yaml
@@ -1,1 +1,11 @@
 {{- include "common.configmap" . }}
+{{- range .Values.initContainers }}
+{{- if .config}}
+{{- include "common.configmap" . }}
+{{- end }}
+{{- end }}
+{{- range .Values.extraContainers }}
+{{- if .config}}
+{{- include "common.configmap" . }}
+{{- end }}
+{{- end }}
