--- a/parcellab/microservice/templates/externalsecret.yaml
+++ b/parcellab/microservice/templates/externalsecret.yaml
@@ -1,1 +1,11 @@
 {{- include "common.externalsecret" . }}
+{{- range .Values.initContainers }}
+{{- if .externalSecret }}
+{{- include "common.externalsecret" . }}
+{{- end }}
+{{- end }}
+{{- range .Values.extraContainers }}
+{{- if .externalSecret }}
+{{- include "common.externalsecret" . }}
+{{- end }}
+{{- end }}
