--- a/parcellab/microservice/Chart.yaml
+++ b/parcellab/microservice/Chart.yaml
@@ -1,8 +1,16 @@
 apiVersion: v2
 name: microservice
 description: Simple microservice
-version: 0.0.16
+version: 0.0.17
 dependencies:
   - name: common
     version: "*"
     repository: file://../common
+  - name: postgresql
+    repository: https://charts.bitnami.com/bitnami
+    version: 12.1.15
+    condition: postgresql.enabled
+  - name: redis
+    repository: https://charts.bitnami.com/bitnami
+    version: 17.7.3
+    condition: redis.enabled
