feat: added support for separate secrets and configmaps for containers

--- a/parcellab/microservice/templates/externalsecret.yaml
+++ b/parcellab/microservice/templates/externalsecret.yaml
@@ -1,11 +1,12 @@
+{{- $root := . -}}
 {{- include "common.externalsecret" . }}
 {{- range .Values.initContainers }}
 {{- if .externalSecret }}
-{{- include "common.externalsecret" . }}
+{{- include "common.externalsecret" (merge (deepCopy .) (dict "env" $root.Values.env "Chart" $root.Chart "Values" (dict "env" $root.name "name" .name "image" .image) )) }}
 {{- end }}
 {{- end }}
 {{- range .Values.extraContainers }}
 {{- if .externalSecret }}
-{{- include "common.externalsecret" . }}
+{{- include "common.externalsecret" (merge (deepCopy .) (dict "env" $root.Values.env "Chart" $root.Chart "Values" (dict "env" $root.name "name" .name "image" .image) )) }}
 {{- end }}
 {{- end }}
