--- a/parcellab/microservice/templates/externalsecret.yaml
+++ b/parcellab/microservice/templates/externalsecret.yaml
@@ -2,11 +2,11 @@
 {{- include "common.externalsecret" . }}
 {{- range .Values.initContainers }}
 {{- if .externalSecret }}
-{{- include "common.externalsecret" (merge (deepCopy .) (dict "env" $root.Values.env "Chart" $root.Chart "Values" (dict "env" $root.name "name" .name "image" .image) )) }}
+{{- include "common.externalsecret" (merge (deepCopy .) (dict "env" $root.Values.env "Chart" $root.Chart "Values" (dict "env" $root.name "name" $root.Values.name "image" .image))) }}
 {{- end }}
 {{- end }}
 {{- range .Values.extraContainers }}
 {{- if .externalSecret }}
-{{- include "common.externalsecret" (merge (deepCopy .) (dict "env" $root.Values.env "Chart" $root.Chart "Values" (dict "env" $root.name "name" .name "image" .image) )) }}
+{{- include "common.externalsecret" (merge (deepCopy .) (dict "env" $root.Values.env "Chart" $root.Chart "Values" (dict "env" $root.name "name" $root.Values.name "image" .image))) }}
 {{- end }}
 {{- end }}
