--- a/parcellab/microservice/values.yaml
+++ b/parcellab/microservice/values.yaml
@@ -168,8 +168,24 @@ resources:
 #     path: /
 #     port: http
 
-initContainers: []
+##
+## Postgresql
+##
+
+postgresql:
+  enabled: false
+  # See default values: https://artifacthub.io/packages/helm/bitnami/postgresql?modal=values
+
+##
+## Redis
+##
+
+redis:
+  enabled: false
+  # See default values: https://artifacthub.io/packages/helm/bitnami/redis?modal=values
+
 #  these containers share secrets, configmaps, volumes and environment variables from the settings above
+initContainers: #[]
 #  - name: myInitContainer1
 #    image:
 #      url: ghcr.io/parcellab/image
@@ -191,22 +207,12 @@ initContainers: []
 #        memory: 12Mi
 #    podSecurityContext:
 #      fsGroup: 2000
+#    config:
+#      MY_INIT_VALUE: bar
+#    externalSecret:
+#      dataFrom:
+#        - extract:
+#            key: app-key-in-secrets-manager
 
 extraContainers: []
 # sidecars configuration is identical to initContainers
-
-##
-## Postgresql
-##
-
-postgresql:
-  enabled: false
-  # See default values: https://artifacthub.io/packages/helm/bitnami/postgresql?modal=values
-
-##
-## Redis
-##
-
-redis:
-  enabled: false
-  # See default values: https://artifacthub.io/packages/helm/bitnami/redis?modal=values
