--- a/parcellab/microservice/values.yaml
+++ b/parcellab/microservice/values.yaml
@@ -185,7 +185,7 @@ redis:
   # See default values: https://artifacthub.io/packages/helm/bitnami/redis?modal=values
 
 #  these containers share secrets, configmaps, volumes and environment variables from the settings above
-initContainers: #[]
+initContainers: []
 #  - name: myInitContainer1
 #    image:
 #      url: ghcr.io/parcellab/image
