feat: extend microservice to support sidecars and initcontainers (#71)
* feat: added the ability to inject init containers and sidecars to microservice

* feat: added newline

* feat: added config

* feat: extracted datadog env vars

* feat: added support for separate secrets and configmaps for containers

* feat: added support for separate secrets and configmaps for containers

* feat: corrected values

* feat: adjusted value template

* feat: added newline

* fix: datadog template description

* Update parcellab/common/templates/_pod.tpl

Co-authored-by: Darío Blanco Iturriaga <dario.iturriaga@parcellab.com>

* Update parcellab/common/templates/_pod.tpl

Co-authored-by: Darío Blanco Iturriaga <dario.iturriaga@parcellab.com>

* Update parcellab/common/templates/_pod.tpl

Co-authored-by: Darío Blanco Iturriaga <dario.iturriaga@parcellab.com>

* Update parcellab/common/templates/_pod.tpl

Co-authored-by: Darío Blanco Iturriaga <dario.iturriaga@parcellab.com>

* fix: added description for the values in container template

* fix: removed obsolete variables

* fix: correctet indendation

* fix: rolled back configmap template check on .Values (the value is mandatory)

* Update parcellab/microservice/values.yaml

Co-authored-by: Darío Blanco Iturriaga <dario.iturriaga@parcellab.com>

* chore: increase chart versions

---------

Co-authored-by: Jose Manuel Palomares <jose.palomares@parcellab.com>
Co-authored-by: Darío Blanco Iturriaga <dario.iturriaga@parcellab.com>

--- a/parcellab/microservice/values.yaml
+++ b/parcellab/microservice/values.yaml
@@ -183,3 +183,36 @@ postgresql:
 redis:
   enabled: false
   # See default values: https://artifacthub.io/packages/helm/bitnami/redis?modal=values
+
+#  these containers share secrets, configmaps, volumes and environment variables from the settings above
+initContainers: []
+#  - name: myInitContainer1
+#    image:
+#      url: ghcr.io/parcellab/image
+#      pullPolicy: Never
+#      tag: commitTag
+#    ports:
+#      - name: http
+#        containerPort: 80
+#        protocol: TCP
+#    env:
+#      - name: foo
+#        value: "bar"
+#    resources:
+#      limits:
+#        cpu: 10m
+#        memory: 12Mi
+#      requests:
+#        cpu: 3m
+#        memory: 12Mi
+#    podSecurityContext:
+#      fsGroup: 2000
+#    config:
+#      MY_INIT_VALUE: bar
+#    externalSecret:
+#      dataFrom:
+#        - extract:
+#            key: app-key-in-secrets-manager
+
+extraContainers: []
+# sidecars configuration is identical to initContainers
