--- a/parcellab/microservice/templates/configmap.yaml
+++ b/parcellab/microservice/templates/configmap.yaml
@@ -1,1 +1,14 @@
+{{- $root := . -}}
 {{- include "common.configmap" . }}
+{{- range .Values.initContainers }}
+{{- if .config}}
+---
+{{- include "common.configmap" (merge (deepCopy .) (dict "env" $root.Values.env "Chart" $root.Chart "Values" (dict "env" $root.name "name" $root.Values.name "image" .image) )) }}
+{{- end }}
+{{- end }}
+{{- range .Values.extraContainers }}
+{{- if .config}}
+---
+{{- include "common.configmap" (merge (deepCopy .) (dict "env" $root.Values.env "Chart" $root.Chart "Values" (dict "env" $root.name "name" $root.Values.name "image" .image))) }}
+{{- end }}
+{{- end }}
