feat: adding default provisioner for nodeSelector in charts

--- a/parcellab/cronjob/values.yaml
+++ b/parcellab/cronjob/values.yaml
@@ -61,7 +61,9 @@ datadog:
 imagePullSecrets:
   - name: github-docker
 
-nodeSelector: {}
+nodeSelector:
+  type: karpenter
+  provisioner: default
 
 podAnnotations: {}
 
