--- a/parcellab/microservice/values.yaml
+++ b/parcellab/microservice/values.yaml
@@ -100,7 +100,9 @@ datadog:
 imagePullSecrets:
   - name: github-docker
 
-nodeSelector: {}
+nodeSelector:
+  type: karpenter
+  provisioner: default
 
 securityContext:
   {}
