--- a/parcellab/worker-group/values.yaml
+++ b/parcellab/worker-group/values.yaml
@@ -53,7 +53,9 @@ datadog:
 imagePullSecrets:
   - name: github-docker
 
-nodeSelector: {}
+nodeSelector:
+  type: karpenter
+  provisioner: default
 
 securityContext:
   {}
