--- a/parcellab/microservice/values.yaml
+++ b/parcellab/microservice/values.yaml
@@ -101,8 +101,7 @@ imagePullSecrets:
   - name: github-docker
 
 nodeSelector:
-  type: karpenter
-  provisioner: default
+  parcellab.dev/node-workloads: fault-tolerant
 
 securityContext:
   {}
