feat: changing nodeselector

--- a/parcellab/microservice/values.yaml
+++ b/parcellab/microservice/values.yaml
@@ -101,7 +101,7 @@ imagePullSecrets:
   - name: github-docker
 
 nodeSelector:
-  parcellab.dev/node-workloads: fault-tolerant
+  parcellab.dev/node-workloads: uninterruptable
 
 securityContext:
   {}
