--- a/parcellab/monolith/values.yaml
+++ b/parcellab/monolith/values.yaml
@@ -201,7 +201,7 @@ imagePullSecrets:
   - name: github-docker
 
 nodeSelector:
-  parcellab.dev/node-workloads: fault-tolerant
+  parcellab.dev/node-workloads: uninterruptable
 
 securityContext:
   {}
