feat: removing nodeselector

--- a/parcellab/cronjob/values.yaml
+++ b/parcellab/cronjob/values.yaml
@@ -61,8 +61,7 @@ datadog:
 imagePullSecrets:
   - name: github-docker
 
-nodeSelector:
-  parcellab.dev/node-workloads: uninterruptable
+nodeSelector: {}
 
 podAnnotations: {}
 
