--- a/parcellab/microservice/values.yaml
+++ b/parcellab/microservice/values.yaml
@@ -100,8 +100,7 @@ datadog:
 imagePullSecrets:
   - name: github-docker
 
-nodeSelector:
-  parcellab.dev/node-workloads: uninterruptable
+nodeSelector: {}
 
 securityContext:
   {}
