--- a/parcellab/monolith/values.yaml
+++ b/parcellab/monolith/values.yaml
@@ -200,8 +200,7 @@ datadog:
 imagePullSecrets:
   - name: github-docker
 
-nodeSelector:
-  parcellab.dev/node-workloads: uninterruptable
+nodeSelector: {}
 
 securityContext:
   {}
