--- a/parcellab/microservice/values.yaml
+++ b/parcellab/microservice/values.yaml
@@ -125,7 +125,10 @@ podAnnotations: {}
 
 replicaCount: 1
 
-strategy: {}
+strategy:
+  rollingUpdate:
+    maxSurge: 1
+    maxUnavailable: 0
 
 tolerations: []
 
