--- a/parcellab/worker-group/values.yaml
+++ b/parcellab/worker-group/values.yaml
@@ -78,7 +78,10 @@ podAnnotations: {}
 
 replicaCount: 1
 
-strategy: {}
+strategy:
+  rollingUpdate:
+    maxSurge: 1
+    maxUnavailable: 0
 
 tolerations: []
 
