--- a/parcellab/microservice/values.yaml
+++ b/parcellab/microservice/values.yaml
@@ -124,6 +124,11 @@ podAnnotations: {}
 
 replicaCount: 1
 
+strategy:
+  rollingUpdate:
+    maxSurge: 1
+    maxUnavailable: 0
+
 tolerations: []
 
 volumes: []
