--- a/parcellab/monolith/values.yaml
+++ b/parcellab/monolith/values.yaml
@@ -224,6 +224,11 @@ podAnnotations: {}
 
 replicaCount: 1
 
+strategy:
+  rollingUpdate:
+    maxSurge: 1
+    maxUnavailable: 0
+
 tolerations: []
 
 volumes: []
