--- a/parcellab/worker-group/values.yaml
+++ b/parcellab/worker-group/values.yaml
@@ -77,6 +77,11 @@ podAnnotations: {}
 
 replicaCount: 1
 
+strategy:
+  rollingUpdate:
+    maxSurge: 1
+    maxUnavailable: 0
+
 tolerations: []
 
 volumes: []
