feat: add support for ttlSecondsAfterFinished for jobs

--- a/parcellab/monolith/values.yaml
+++ b/parcellab/monolith/values.yaml
@@ -108,6 +108,7 @@ job:
 jobs: []
 #  - name: migrate
 #    hook: PreSync
+#    ttlSecondsAfterFinished: 100
 #    command:
 #      - /bin/sh
 #      - -c
