feat: switched to hookDeletePolicy instead of ttlSecondsAfterFinished to ensure sync with ArgoCD

--- a/parcellab/monolith/values.yaml
+++ b/parcellab/monolith/values.yaml
@@ -108,7 +108,7 @@ job:
 jobs: []
 #  - name: migrate
 #    hook: PreSync
-#    ttlSecondsAfterFinished: 100
+#    hookDeletePolicy: HookSucceeded
 #    command:
 #      - /bin/sh
 #      - -c
