feat: add support for ttlSecondsAfterFinished for jobs (#122)
* feat: add support for ttlSecondsAfterFinished for jobs

* feat: switched to hookDeletePolicy instead of ttlSecondsAfterFinished to ensure sync with ArgoCD

--- a/parcellab/monolith/values.yaml
+++ b/parcellab/monolith/values.yaml
@@ -108,6 +108,7 @@ job:
 jobs: []
 #  - name: migrate
 #    hook: PreSync
+#    hookDeletePolicy: HookSucceeded
 #    command:
 #      - /bin/sh
 #      - -c
