--- a/parcellab/monolith/values.yaml
+++ b/parcellab/monolith/values.yaml
@@ -104,6 +104,8 @@ job:
   backoffLimit: 1
   activeDeadlineSeconds: 300
   restartPolicy: Never
+  failedJobsHistoryLimit: 2
+  successfulJobsHistoryLimit: 1
 
 jobs: []
 #  - name: migrate
