fix: remove job history limit
there was a reason why it was not included, it does not work on jobs, only cronjobs.

--- a/parcellab/monolith/values.yaml
+++ b/parcellab/monolith/values.yaml
@@ -104,6 +104,7 @@ job:
   backoffLimit: 1
   activeDeadlineSeconds: 300
   restartPolicy: Never
+  ttlSecondsAfterFinished: 3600
 
 jobs: []
 #  - name: migrate
