fix: remove job history limit (#143)
there was a reason why it was not included, it does not work on jobs, only cronjobs.

--- a/parcellab/monolith/values.yaml
+++ b/parcellab/monolith/values.yaml
@@ -106,8 +106,7 @@ job:
   backoffLimit: 1
   activeDeadlineSeconds: 300
   restartPolicy: Never
-  failedJobsHistoryLimit: 2
-  successfulJobsHistoryLimit: 1
+  ttlSecondsAfterFinished: 3600
 
 jobs: []
 #  - name: migrate
