--- a/parcellab/microservice/values.yaml
+++ b/parcellab/microservice/values.yaml
@@ -15,6 +15,8 @@ service:
   protocol: TCP
   type: ClusterIP
 
+revisionHistoryLimit: 0
+
 ##
 ## Ingress
 ##
@@ -219,5 +221,5 @@ initContainers: []
 #        - extract:
 #            key: app-key-in-secrets-manager
 
-extraContainers: []
 # sidecars configuration is identical to initContainers
+extraContainers: []
