fix: remove replicacount default value
I believe we must remove the replica count default value.
Otherwise - if no value is defined - it is set to '1' instead of leaving the scaler to manage it.

--- a/parcellab/common/values.yaml
+++ b/parcellab/common/values.yaml
@@ -27,7 +27,7 @@ podDisruptionBudget:
   spec:
     maxUnavailable: "50%"
 podSecurityContext: {}
-replicaCount: 1
+# replicaCount: 1 # think we need to remove this
 revisionHistoryLimit: 0
 strategy: {}
 resources: {}
