--- a/parcellab/common/values.yaml
+++ b/parcellab/common/values.yaml
@@ -27,7 +27,7 @@ podDisruptionBudget:
   spec:
     maxUnavailable: "50%"
 podSecurityContext: {}
-replicaCount: 1
+# replicaCount: 1 # think we need to remove this
 strategy: {}
 resources: {}
 securityContext: {}
