chore: enabling worker deploys with no replicas (#148)
* chore: Enabling worker deploys with no replicas

* chore: Enabling worker deploys with no replicas

* chore: Adding flag to documentation

--- a/parcellab/monolith/values.yaml
+++ b/parcellab/monolith/values.yaml
@@ -154,6 +154,7 @@ workers:
   #   containerEnv:
   #     - name: MY_ENV_VAR
   #       value: "myvalue"
+  #   disableReplicas: false
 
 ##
 ## Configuration
