chore: enable disabling of replica count on primary service for autoscaling

--- a/parcellab/monolith/values.yaml
+++ b/parcellab/monolith/values.yaml
@@ -228,6 +228,8 @@ serviceAccount:
 podAnnotations: {}
 
 replicaCount: 1
+# disables setting replica count in case of autoscaling enabled
+disableReplicas: false
 
 strategy:
   rollingUpdate:
