--- a/parcellab/worker-group/values.yaml
+++ b/parcellab/worker-group/values.yaml
@@ -78,7 +78,7 @@ serviceAccount:
 podAnnotations: {}
 
 replicaCount: 1
-disableReplicas: false
+disableReplicaCount: false
 
 strategy:
   rollingUpdate:
