chore: Adding $root scope to template

--- a/parcellab/monolith/templates/keda-workers.yaml
+++ b/parcellab/monolith/templates/keda-workers.yaml
@@ -1,7 +1,7 @@
 {{- $root := . -}}
 {{- if .Values.workers -}}
 {{- range .Values.workers }}
-{{- include "keda.hpa" . }}
+{{- include "keda.hpa" (merge (deepCopy $root) (dict "service" . "type" "worker")) }}
 ---
 {{- end -}}
 {{- end -}}
