chore: make scaleoninflight configurable

--- a/parcellab/common/values.yaml
+++ b/parcellab/common/values.yaml
@@ -15,7 +15,7 @@ externalSecret: {}
 imagePullSecrets:
   - name: github-docker
 image:
-  pullPolicy: Always
+  pullPolicy: IfNotPresent
   tag: stable
 ingress:
   enabled: false
