--- a/parcellab/cronjob/values.yaml
+++ b/parcellab/cronjob/values.yaml
@@ -100,7 +100,7 @@ command:
 
 image:
   # repository: nginx  # Will apply if orgRepository and name is not defined
-  pullPolicy: Always
+  pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: stable
 
