feat: adding into example value file

--- a/parcellab/common/values.yaml
+++ b/parcellab/common/values.yaml
@@ -20,6 +20,7 @@ image:
 ingress:
   enabled: false
 name: common
+terminationGracePeriodSeconds: 30
 nodeSelector: {}
 orgRepository: ghcr.io/parcellab
 podAnnotations: {}
