feat: adding into examples values files

--- a/parcellab/microservice/values.yaml
+++ b/parcellab/microservice/values.yaml
@@ -102,6 +102,8 @@ datadog:
 imagePullSecrets:
   - name: github-docker
 
+terminationGracePeriodSeconds: 30
+
 nodeSelector: {}
 
 securityContext:
