--- a/parcellab/monolith/values.yaml
+++ b/parcellab/monolith/values.yaml
@@ -220,6 +220,8 @@ datadog:
 imagePullSecrets:
   - name: github-docker
 
+terminationGracePeriodSeconds: 30
+
 nodeSelector: {}
 
 securityContext:
