fix: adds datadog socket volume safe-to-evict annotation
the cluster autoscaler seems to be at the moment not moving our pods,
as they have local host mounts.

also adds worker default values

--- a/parcellab/monolith/templates/deployment-workers.yaml
+++ b/parcellab/monolith/templates/deployment-workers.yaml
@@ -1,7 +1,7 @@
 {{- $root := . -}}
 {{- if .Values.workers -}}
 {{- range .Values.workers }}
-{{- include "common.deployment" (merge (deepCopy $root) (dict "service" . "type" "worker")) }}
+{{- include "common.deployment" (merge (merge (deepCopy $root) (dict "worker" .)) (dict "service" . "type" "worker")) }}
 ---
 {{- end -}}
 {{- end -}}
