--- a/parcellab/monolith/values.yaml
+++ b/parcellab/monolith/values.yaml
@@ -128,6 +128,17 @@ jobs: []
 ## Workers
 ##
 
+worker:
+  # only for default values
+#  resources:
+#    limits:
+#      cpu: 100m
+#      memory: 128Mi
+#    requests:
+#      cpu: 50m
+#      memory:
+#        64Mi
+
 workers: []
 #  - name: myworker
 #    command:
@@ -148,32 +159,24 @@ workers: []
 #      httpGet:
 #        path: /
 #        port: http
-#    resources:
-#      limits:
-#        cpu: 100m
-#        memory: 128Mi
-#      requests:
-#        cpu: 50m
-#        memory: 64Mi
 #    containerEnv:
 #      - name: MY_ENV_VAR
 #        value: "myvalue"
-#    disableReplicaCount: false
 #
-#   KEDA configuration is optional
+#    # KEDA configuration is optional
 #
-#   keda:
-#     paused: false
-#     restoreToOriginalReplicaCount: true
-#     cooldownPeriod: 300
-#     maxReplicaCount: 2
-#     minReplicaCount: 1
-#     pollingInterval: 3600
-#     scaleTargetName: NAME_OF_DEPLOYMENT
-#     awsRegion: "AWS_REGION"
-#     queueLength: '100'
-#     queueURL: SQS_QUEUE
-#     scaleOnInFlight: false
+#    keda:
+#      paused: false
+#      restoreToOriginalReplicaCount: true
+#      cooldownPeriod: 300
+#      maxReplicaCount: 2
+#      minReplicaCount: 1
+#      pollingInterval: 3600
+#      scaleTargetName: NAME_OF_DEPLOYMENT
+#      awsRegion: "AWS_REGION"
+#      queueLength: "100"
+#      queueURL: SQS_QUEUE
+#      scaleOnInFlight: false
 
 ##
 ## Configuration
