--- a/parcellab/monolith/templates/deployment-workers.yaml
+++ b/parcellab/monolith/templates/deployment-workers.yaml
@@ -1,7 +1,8 @@
 {{- $root := . -}}
+{{- $defaultWorker := .Values.worker}}
 {{- if .Values.workers -}}
 {{- range .Values.workers }}
-{{- include "common.deployment" (merge (merge (deepCopy $root) (dict "worker" .)) (dict "service" . "type" "worker")) }}
+{{- include "common.deployment" (merge (deepCopy $root) (dict "service" (merge $defaultWorker .) "type" "worker")) }}
 ---
 {{- end -}}
 {{- end -}}
