--- a/parcellab/monolith/templates/deployment-workers.yaml
+++ b/parcellab/monolith/templates/deployment-workers.yaml
@@ -2,7 +2,7 @@
 {{- $defaultWorker := .Values.worker}}
 {{- if .Values.workers -}}
 {{- range .Values.workers }}
-{{- include "common.deployment" (merge (deepCopy $root) (dict "service" (mergeOverwrite (deepCopy $defaultWorker) .) "type" "worker")) }}
+{{- include "common.deployment" (merge (deepCopy $root) (dict "service" (mergeOverwrite (deepCopy (default dict $defaultWorker)) .) "type" "worker")) }}
 ---
 {{- end -}}
 {{- end -}}
