feat: fixing strategy for workers in common.deployment template

--- a/parcellab/worker-group/values.yaml
+++ b/parcellab/worker-group/values.yaml
@@ -142,6 +142,11 @@ workers: []
 #   - /bin/sh
 #   - -c
 #   - date; echo Hello from the Kubernetes cluster
+#   strategy:
+#     type: RollingUpdate
+#     rollingUpdate:
+#       maxSurge: 25%
+#       maxUnavailable: 25%
 #   portNumber: 3000
 #   livenessProbe:
 #     httpGet:
