--- a/parcellab/monolith/templates/poddisruptionbudget.yaml
+++ b/parcellab/monolith/templates/poddisruptionbudget.yaml
@@ -1,10 +1,5 @@
-{{- if .Values.extraServices -}}
+{{- if .Values.podDisruptionBudget.enabled -}}
 {{- $root := . -}}
-{{- range .Values.extraServices }}
-{{- if .podDisruptionBudget -}}
-{{- include "common.poddisruptionbudget" (merge (deepCopy $root) (dict "podDisruptionBudget" .podDisruptionBudget "name" .name)) }}
+{{- $pdbData := dict "podDisruptionBudget" .Values.podDisruptionBudget "name" (include "common.fullname" $root) -}}
+{{- include "common.poddisruptionbudget" (merge (deepCopy $root) $pdbData) }}
 {{- end -}}
----
-{{- end -}}
-{{- end -}}
-{{- include "common.poddisruptionbudget" . }}
