--- a/parcellab/microservice/templates/poddisruptionbudget.yaml
+++ b/parcellab/microservice/templates/poddisruptionbudget.yaml
@@ -1,5 +1,1 @@
-{{- if .Values.podDisruptionBudget.enabled -}}
-{{- $root := . -}}
-{{- $pdbData := dict "podDisruptionBudget" .Values.podDisruptionBudget "name" (include "common.fullname" $root) -}}
-{{- include "common.poddisruptionbudget" (merge (deepCopy $root) $pdbData) }}
-{{- end -}}
+{{- include "common.poddisruptionbudget" . }}
