feat: teamplate for bluegreen deployments

--- a/parcellab/common/values.yaml
+++ b/parcellab/common/values.yaml
@@ -8,6 +8,8 @@ autoscaling:
   targetCPUUtilizationPercentage: 80
 config: {}
 containerEnv: {}
+blueGreen:
+  enabled: false
 datadog:
   enabled: false
 env: prod
