--- a/parcellab/monolith/values.yaml
+++ b/parcellab/monolith/values.yaml
@@ -200,12 +200,49 @@ externalSecret:
   #   - extract:
   #       key: app-key-in-secrets-manager
 
-# Enabling blue green rollout deployments for ArgoCD
-# See https://argo-rollouts.readthedocs.io/en/stable/features/bluegreen/
-blueGreen:
+# Enable Argo Rollouts Deployments Strategies
+# See https://argo-rollouts.readthedocs.io/en/stable/
+rolloutDeployment:
   enabled: false
-  spec:
-    autoPromotionEnabled: false
+  ## BlueGreen deployment example
+  # blueGreen:
+  #   scaleDownDelaySeconds: 600
+  #   prePromotionAnalysis:
+  #     templates:
+  #     - templateName: app-analysis
+  #   postPromotionAnalysis:
+  #     templates:
+  #     - templateName: app-analysis
+
+  ## Canary deployment example
+  # canary:
+  #   maxSurge: "25%"
+  #   maxUnavailable: 0
+  #   steps:
+  #   - setWeight: 10
+  #   - pause:
+  #       duration: 1h
+  #   - setWeight: 20
+  #   - pause: {}
+  #   - analysis:
+  #       templates:
+  #       - templateName: success-rate
+  #       args:
+  #       - name: service-name
+  #         value: guestbook-svc.default.svc.cluster.local
+
+  ## Creating Analysis templates
+  # metrics:
+  # - name: error-rate
+  #   interval: 5m
+  #   successCondition: result <= 0.01
+  #   failureLimit: 3
+  #   provider:
+  #     datadog:
+  #       apiVersion: v2
+  #       interval: 5m
+  #       query: |
+  #         sum:requests.error.rate{service:app}
 
 ##
 ## Autoscaling
