--- a/parcellab/microservice/values.yaml
+++ b/parcellab/microservice/values.yaml
@@ -77,8 +77,7 @@ rolloutDeployment:
   enabled: false
   ## BlueGreen deployment example
   # blueGreen:
-  #   activeService: service-name
-  #   previewService: service-name-preview
+  #   autoPromotionEnabled: false
 
   ## Canary deployment example
   # canary:
@@ -105,8 +104,6 @@ rolloutDeployment:
   #         query: |
   #           sum:requests.error.rate{service:app}
   #   spec:
-  #     activeService: service-name
-  #     previewService: service-name-preview
   #     prePromotionAnalysis:
   #       templates:
   #       - templateName: smoke-tests-analysis
