feat: template for blue/green deployments (#202)
* feat: teamplate for bluegreen deployments

* feat: templates for argo rollouts

* feat: running prettier

* feat: refactoring analysis templates creation and updating examples

* feat: fixing common chart version

* feat: refactoring analysis templates creation and updating examples

--- a/parcellab/common/values.yaml
+++ b/parcellab/common/values.yaml
@@ -8,6 +8,8 @@ autoscaling:
   targetCPUUtilizationPercentage: 80
 config: {}
 containerEnv: {}
+rolloutDeployment:
+  enabled: false
 datadog:
   enabled: false
 env: prod
