--- a/parcellab/monolith/values.yaml
+++ b/parcellab/monolith/values.yaml
@@ -200,6 +200,46 @@ externalSecret:
   #   - extract:
   #       key: app-key-in-secrets-manager
 
+# Enable Argo Rollouts Deployments Strategies
+# See https://argo-rollouts.readthedocs.io/en/stable/
+rolloutDeployment:
+  enabled: false
+  ## BlueGreen deployment example
+  # blueGreen:
+  #   autoPromotionEnabled: false
+
+  ## Canary deployment example
+  # canary:
+  #   maxSurge: "25%"
+  #   maxUnavailable: 0
+  #   steps:
+  #   - setWeight: 10
+  #   - pause:
+  #       duration: 1h
+  #   - setWeight: 20
+  #   - pause: {}
+
+  ## BlueGreen deployment with Analysis template.
+  # blueGreen:
+  #   metrics:
+  #   - name: smoke-tests
+  #     interval: 5m
+  #     successCondition: result <= 0.01
+  #     failureLimit: 3
+  #     provider:
+  #       datadog:
+  #         apiVersion: v2
+  #         interval: 5m
+  #         query: |
+  #           sum:requests.error.rate{service:app}
+  #   spec:
+  #     prePromotionAnalysis:
+  #       templates:
+  #       - templateName: smoke-tests-analysis
+  #       args:
+  #       - name: service-name
+  #         value: preview-svc.default.svc.cluster.local
+
 ##
 ## Autoscaling
 ##
