feat: renamed rolloutDeployment to argoRollout and refactored the rollout template to match the analysis concept

--- a/parcellab/common/values.yaml
+++ b/parcellab/common/values.yaml
@@ -8,7 +8,7 @@ autoscaling:
   targetCPUUtilizationPercentage: 80
 config: {}
 containerEnv: {}
-rolloutDeployment:
+argoRollout:
   enabled: false
 datadog:
   enabled: false
