--- a/parcellab/monolith/values.yaml
+++ b/parcellab/monolith/values.yaml
@@ -202,43 +202,58 @@ externalSecret:
 
 # Enable Argo Rollouts Deployments Strategies
 # See https://argo-rollouts.readthedocs.io/en/stable/
-rolloutDeployment:
+argoRollout:
   enabled: false
-  ## BlueGreen deployment example
-  # blueGreen:
-  #   autoPromotionEnabled: false
 
-  ## Canary deployment example
-  # canary:
-  #   maxSurge: "25%"
-  #   maxUnavailable: 0
-  #   steps:
-  #   - setWeight: 10
-  #   - pause:
-  #       duration: 1h
-  #   - setWeight: 20
-  #   - pause: {}
-
-  ## BlueGreen deployment with Analysis template.
-  # blueGreen:
-  #   metrics:
-  #   - name: smoke-tests
-  #     interval: 5m
-  #     successCondition: result <= 0.01
-  #     failureLimit: 3
-  #     provider:
-  #       datadog:
-  #         apiVersion: v2
-  #         interval: 5m
-  #         query: |
-  #           sum:requests.error.rate{service:app}
-  #   spec:
-  #     prePromotionAnalysis:
-  #       templates:
-  #       - templateName: smoke-tests-analysis
-  #       args:
-  #       - name: service-name
-  #         value: preview-svc.default.svc.cluster.local
+#  ## Canary deployment example with analysis
+#  canary:
+#    steps:
+#      - setWeight: 20
+#      - pause: { duration: 10m }
+#      - setWeight: 40
+#      - pause: { duration: 10m }
+#      - setWeight: 60
+#      - pause: { duration: 10m }
+#      - setWeight: 80
+#      - pause: { duration: 10m }
+#  canaryMetrics:
+#    - name: service-error-rate
+#      interval: 5m
+#      successCondition: result <= 0.01
+#      failureLimit: 3
+#      provider:
+#        datadog:
+#          apiVersion: v2
+#          interval: 5m
+#          query: |
+#            sum:requests.error.rate{service:{{args.service-name}}}
+#
+#
+#  ## BlueGreen deployment with Analysis template.
+#  blueGreen:
+#    autoPromotionEnabled: false
+#  blueGreenMetricsPrePromotion: # optional
+#  - name: smoke-tests
+#    interval: 5m
+#    successCondition: result >= 0.01
+#    failureLimit: 3
+#    provider:
+#      datadog:
+#        apiVersion: v2
+#        interval: 5m
+#        query: |
+#          sum:requests.success.rate{service:app}
+#  blueGreenMetricsPostPromotion: # optional
+#  - name: error-rate
+#    interval: 5m
+#    successCondition: result <= 0.01
+#    failureLimit: 3
+#    provider:
+#      datadog:
+#        apiVersion: v2
+#        interval: 5m
+#        query: |
+#          sum:requests.error.rate{service:app}
 
 ##
 ## Autoscaling
